[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Car.gd" type="Script" id=1]
[ext_resource path="res://assets/images/car.png" type="Texture2D" id=2]
[ext_resource path="res://assets/sounds/car/car_explode.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/images/animations/explosions/big_explosion/big_explosion_horiz.png" type="Texture2D" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72, 23.5 )

[sub_resource type="Animation" id=2]
resource_name = "Explode"
length = 3.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 3.8 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("ExplosionSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.05,
"stream": ExtResource( 3 )
} ],
"times": PackedFloat32Array( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExplosionSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.3 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Car" type="Area2D"]
script = ExtResource( 1 )

[node name="ExplosionSprite" type="Sprite2D" parent="."]
position = Vector2( 8, -93 )
texture = ExtResource( 4 )
hframes = 6

[node name="CarSprite" type="Sprite2D" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape3D" type="CollisionShape2D" parent="."]
position = Vector2( 10, 11.5 )
shape = SubResource( 1 )

[node name="ExplosionAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explode = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[connection signal="body_entered" from="." to="." method="_on_Car_body_entered"]
